@@ -38,6 +38,9 @@ bisonc++ (2.3.2)
             }
         ;
 
+  * #line directives in rule action blocks now correctly identify the grammar
+    specification file in which the action block was defined.
+
 bisonc++ (2.3.1)
 
   * Fixed character returned in escaped constants. E.g., at '\'' the \ was
